manifests/network-policy/allow-all-dvwa-ns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-dvwa-ns
  namespace: dvwa
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: fos
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: fos
