manifests/network-policy/allow-all-fos-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-fos-ns
  namespace: fos
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: dvwa
    - namespaceSelector:
        matchLabels:
          name: nginx

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: dvwa
    - namespaceSelector:
        matchLabels:
          name: nginx
