manifests/network-policy/allow-dns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: kube-dns
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            api: allow
      ports:
      - protocol: UDP
        port: 53
