manifests/network-policy/allow-dns2.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns2
  namespace: default
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            api: allow
      ports:
      - protocol: UDP
        port: 53
