manifests/network-policy/allow-fos-api-ns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fos-api-ns
  namespace: fos
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.1/8
    ports:
    - protocol: TCP
      port: 443
