manifests/network-policy/allow-fos-default-ns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fos-default-ns
  namespace: fos
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: fos
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: fos
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
